<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/dashboardToolbar"
            style="@style/ExAppToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/toolbar_transaction"
            app:layout_scrollFlags="scroll|enterAlways"
            android:elevation="0dp"
            android:padding="0dp"
            app:title="@string/label_new_transaction"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            >
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_big"
            >

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/transactionToggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_normal"
            app:checkedButton="@+id/buttonIncome"
            >
          <Button
            android:id="@+id/buttonIncome"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/action_income"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />
            <Button
                android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/action_expense"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />
        </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ExTextInputLayout.ExposedDropdownMenu.NotLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                >
                <AutoCompleteTextView
                    android:id="@+id/accountAuto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:hint="@string/hint_requires_account"
                    android:imeOptions="actionNext"
                    style="?textAppearanceBody1"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ExTextInputLayout.ExposedDropdownMenu.NotLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                >
                <AutoCompleteTextView
                    android:id="@+id/categoryAuto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:hint="@string/hint_requires_category"
                    android:imeOptions="actionNext"
                    style="?textAppearanceBody1"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/ExTextInputLayout.FilledBox.NotLine"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:hint="@string/hint_value"
                android:minWidth="100dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transactionValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:gravity="end"
                    android:maxLength="@integer/menu_max_price"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/transactionProgress"
        style="@style/Progress"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="?actionBarSize"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>